<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.NowPlayingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--some changes has been added to textView-->
            <TextView
                style="@style/intentOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nowPlayingIntentText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/artist_cover"
                    style="@style/nowPlayingMainImage"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/headphones1" />

                <TextView
                    android:id="@+id/song_artist_name"
                    style="@style/nowPlayingInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/artist_cover"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nowPlayingInfo"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shuffle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/song_artist_name"
                    style="@style/shuffleButton"
                    android:src="@drawable/shuffle_button" />

                <ImageView
                    android:id="@+id/repeat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/song_artist_name"
                    style="@style/repeatButton"
                    android:src="@drawable/repeat_button" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/paddingBottom8"
                android:paddingTop="@dimen/paddingTop8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/songPlayingStartTime">

                </TextView>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="8" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/marginRight16"
                    android:layout_weight="1"
                    android:text="@string/songPlayingEndTime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/skip_previous_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/skipPreviousButton"
                    android:src="@drawable/skip_previous_button" />

                <ImageView
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/play_button" />

                <ImageView
                    android:id="@+id/skip_next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/skipNextButton"
                    android:src="@drawable/skip_next_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:background="@color/cardview_light_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/songDetails1"
                    style="@style/songDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/songDetails2"
                    style="@style/songDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/songDetails3"
                    style="@style/songDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/songDetails4"
                    style="@style/songDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
